Add --sun-misc-unsafe-memory-access=allow to javaOptions for JDK23+